--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -16,6 +16,15 @@ security:
         main:
             lazy: true
             provider: app_user_provider
+            pattern: ^/
+            user_checker: App\Security\UserChecker
+            form_login:
+                # "app_login" is the name of the route created previously
+                login_path: app_security
+                check_path: app_security
+            logout:
+                path: app_logout
+                target: app_etablissement
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
